# towards-a-universal-gateset-for-QMA1

./: README.md  gadget_2local.py  gadget_4sat.py  gadget_homology.py
clique_homology_gadgets_cpp/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json  vcpkg_CMakeLists.txt
clique_homology_gadgets_cpp/cmake/: FindSuiteSparse.cmake
clique_homology_gadgets_cpp/src/: eigen.h  gadgets.cpp  gadgets.h  graph.cpp  graph.h  homology.cpp  homology.h  itertools.h  main.cpp  simplex.cpp  simplex.h  sparsemath.cpp  sparsemath.h  test.cpp  test4sat.cpp  testutil.h  types.h
